<resources>
    <string name="app_name">Swipr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_swipr_pw">Enter a password</string>
    <string name="log_in">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="swipr">SWIPR</string>
    <string name="title_activity_register">"Register "</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="send_message">Send Message</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan</string>
    <string name="back">Back</string>
    <string name="accept_request">Accept Request</string>
    <string name="manage_friend_requests">Manage Friend Requests</string>
    <string name="view_friend_list">View Friend List</string>
    <string name="title_activity_maps">Map</string>
    <string name="view_map">View Map</string>
    <string name="insert_qr_here">insert qr here</string>
    <string name="generate_qrcode">Generate QRCode</string>
    <string name="todo">TODO</string>
    <string name="generate_qr">Generate QR</string>
    <string name="request">REQUEST</string>
    <string name="don_t_worry_about_it">Don\'t worry about it</string>
    <string name="dummy_val">dummy_val</string>
    <string name="cp">CP :</string>
    <string name="press_to_accept_request">Press to Accept Request</string>
    <!--&gt;>>>>>> 5dc4580ea1a4d16cd734c6e61685d6b1bbfe159a-->
</resources>
