<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reLay"
    tools:context=".QRActivity">


    <ImageView
        android:id="@+id/qrCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        tools:srcCompat="@drawable/friend" />


    <Button
        android:id="@+id/scanME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="57dp"
        android:onClick="backButton"
        android:text="@string/back"
        app:layout_constraintVertical_bias="0.985" />

    <Button
        android:id="@+id/genQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="131dp"
        android:text="@string/generate_qrcode"
        app:layout_constraintBottom_toTopOf="@+id/scanME"
        app:layout_constraintTop_toBottomOf="@+id/qrCode" />
</RelativeLayout>